--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
                             <div class="inputField">
                                 <div>
                                     <label for="name">Name:</label>
-                                    <input type="text" name="" id="userName" minlength="20" maxlength="20"> 
+                                    <input type="text" name="" id="userName" maxlength="20"> 
                                 </div>
                                 <div>
                                     <label for="age">Age:</label>
-                                    <input type="number" name="" id="age" > 
+                                    <input type="number" name="" id="age"> 
                                 </div>
                                 <div>
                                     <label for="city">City:</label>
